# zkvm-ndsmt

./: .gitignore  README.md
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  ndsmt.py
script/src/: main.rs
