[package]
name = "ndproof-program"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = "4.1.7"
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
primitive-types = "0.12" # For U256
lib = { path = "../lib", package = "ndproof-lib" }
sha2 = { git = "https://github.com/succinctbot/RustCrypto-hashes.git" }
hex = "0.4.3"