[package]
name = "ndproof-script"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
bincode = "1.3.3"
hex = "0.4.3"
primitive-types = "0.12" # For U256
sp1-sdk = { version="4.1.7", features=["native-gnark"] }
lib = { path = "../lib", package = "ndproof-lib" }

[build-dependencies]
sp1-build = "4.1.7"
